Table konsult {
  konsult_id INTEGER [pk]
  foretags_id INTEGER [ref: > foretag.foretags_id]
}

Table foretag {
  foretags_id INTEGER [pk]
  namn VARCHAR(50) [not null]
  organisationsnummer VARCHAR(50) [not null]
  adress VARCHAR(255) [not null]
  skatt VARCHAR(50) [not null]
  timlon VARCHAR(50) [not null]
}

Table larare {
  larare_id INTEGER [pk, ref: > konsult.konsult_id]
  fornamn VARCHAR(50) [not null]
  efternamn VARCHAR(50) [not null]
  email VARCHAR(255) [not null, unique]
  telefonnumer VARCHAR(20) [unique]
}

Table kurs {
  kurs_id INTEGER [pk]
  kursnamn VARCHAR(50) [not null]
  kurskod VARCHAR(10) [not null]
  poang VARCHAR(10) [not null]
  beskrivning VARCHAR(255)
}

Table kurslarare {
  larare_id INTEGER [ref: > larare.larare_id]
  kurs_id INTEGER [ref: > kurs.kurs_id]
}

Table program {
  program_id INTEGER [pk]
  program_namn VARCHAR(50) [not null]
  beskrivning VARCHAR(255)
}

Table programkurs {
  program_kurs_id INTEGER [pk]
  kurs_id INTEGER [ref: > kurs.kurs_id]
  program_id INTEGER [ref: > program.program_id]
  startdatum DATE
  slutdatum DATE
}

Table utbildningsledare {
  utbildningsledare_id INTEGER [pk]
  fornamn VARCHAR(50) [not null]
  efternamn VARCHAR(50) [not null]
  email VARCHAR(255) [not null, unique]
}

Table skola {
  skol_id INTEGER [pk]
  skol_namn VARCHAR(50) [not null]
  adress VARCHAR(50) [not null]
}

Table klass {
  klass_id INTEGER [pk]
  klassnamn VARCHAR(50) [not null]
  program_id INTEGER [ref: > program.program_id]
  utbildningsledare_id INTEGER [ref: > utbildningsledare.utbildningsledare_id]
  skol_id INTEGER [ref: > skola.skol_id]
}

Table student {
  student_id INTEGER [pk]
  klass_id INTEGER [ref: > klass.klass_id]
  fornamn VARCHAR(50) [not null]
  efternamn VARCHAR(50) [not null]
}

Table student_info {
  student_id INTEGER [pk, ref: > student.student_id]
  personnumer INTEGER [not null, unique]
  adress VARCHAR(50) [not null]
  telefonnumer VARCHAR(20) [not null]
}